# EtherOS

./: .gitignore  CMakeLists.txt  README.md  buildlog.txt
Assets/: README.md
Core/: board.h  kernel.c
Drivers/: display.c  display.h  sdcard.c  sdcard.h  spi_bus.c  spi_bus.h  st7735.c  st7735.h  wifi.c  wifi.h
Services/: plugin_manager.c  plugin_manager.h
Web/: webserver.c  webserver.h
main/: CMakeLists.txt  EtherOS.c
